# Mobile-App-for-Direct-Market-Access-for-Farmers

./: app.py  pyproject.toml
templates/: SingUp.html  home.html  login.html
